--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@
             overflow: hidden;
             transition: transform 0.3s ease;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            margin-bottom: 3rem;
         }
 
         .project-card:hover {
@@ -245,6 +246,16 @@
 
         .dot.active, .dot:hover {
             background-color: #ffffff;
+        }
+
+        #projects h1 {
+            text-align: center;
+            margin-bottom: 3rem;  /* Adds space below the "Projects" heading */
+        }
+
+        #projects h2 {
+            text-align: left;
+            margin-bottom: 2rem;  /* Adds space below the "SBCS" heading */
         }
 
         /* Contact Section */
