--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             overflow: hidden;
             transition: transform 0.3s ease;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            margin-bottom: 3rem;
+            margin-bottom: 5rem;
         }
 
         .project-card:hover {
@@ -318,11 +318,13 @@
 
   <section id="projects">
     <h1 style="text-align: center;">Projects</h1>
-    <h2 style="text-align: left;">SBCS</h2>
+
+    <h1 style="text-align: left;">SBCS</h1>
+
     <div class="project-card">
         <div class="project-info">
             <h3>TOSS 2022</h3>
-            <p>A stunning visual exploration showcasing innovative design principles and creative thinking.</p>
+            <p>Student Party of more than 3000 attendees</p>
         </div>
         <div class="slideshow-container" id="slideshow-1">
             <div class="slide active">
@@ -342,8 +344,8 @@
 
     <div class="project-card">
         <div class="project-info">
-            <h3>TOSS 2022</h3>
-            <p>A stunning visual exploration showcasing innovative design principles and creative thinking.</p>
+            <h3>Quadrabang 2022</h3>
+            <p>Student party of more than 2000 attendees</p>
         </div>
         <div class="slideshow-container" id="slideshow-2">
             <div class="slide active">
@@ -358,78 +360,56 @@
         </div>
     </div>
 
-
     <div class="project-card">
         <div class="project-info">
-          <h3>Urban Photography</h3>
-          <p>Capturing the essence of city life through a unique architectural perspective.</p>
+          <h3>Wrecking Bang</h3>
+          <p>Student party</p>
         </div>
         <div class="project-media">
-          <img src="https://imgur.com/o4I5eSP.jpg" alt="Project 2">
+          <img src="https://imgur.com/QfjIola.jpg" alt="Wrecking 1">
         </div>
     </div>
 
     <div class="project-card">
-        <div class="project-media">
-          <img src="https://imgur.com/MIffIxc.jpg" alt="Project 2">
-        </div>
         <div class="project-info">
-          <h3>Urban Photography</h3>
-          <p>Capturing the essence of city life through a unique architectural perspective.</p>
+            <h3>NDT 2022</h3>
+            <p>Various artists night</p>
+        </div>
+        <div class="slideshow-container" id="slideshow-3">
+            <div class="slide active">
+                <img src="https://imgur.com/D8YA2tv.jpg" alt="NDT 1">
+            </div>
+            <div class="slide">
+                <img src="https://imgur.com/J27QlSW.jpg" alt="NDT 2">
+            </div>
+            <button class="prev">&#10094;</button>
+            <button class="next">&#10095;</button>
+            <div class="dots-container"></div>
+        </div>
+    </div>
+
+
+    <div class="project-card">
+        <div class="project-info">
+          <h3>Copacabanight</h3>
+          <p>2 IVLs</p>
+        </div>
+        <div class="project-media">
+            <img src="https://lh3.googleusercontent.com/d/1bZgP3Q3IZtsZ1Jd2AwyH5qa9wzMp6lil" alt="Copa">
         </div>
     </div>
 
     <div class="project-card">
-        <div class="project-media">
-          <img src="https://imgur.com/QfjIola.jpg" alt="Project 2">
-        </div>
         <div class="project-info">
-          <h3>Urban Photography</h3>
-          <p>Capturing the essence of city life through a unique architectural perspective.</p>
+          <h3>Tomorrow bang</h3>
+          <p>lights</p>
+        </div>
+        <div class="project-media">
+          <img src="https://imgur.com/W8vIYCE.jpg" alt="Tomorrow 2">
         </div>
     </div>
 
-    <div class="project-card">
-        <div class="project-media">
-          <img src="https://imgur.com/D8YA2tv.jpg" alt="Project 2">
-        </div>
-        <div class="project-info">
-          <h3>Urban Photography</h3>
-          <p>Capturing the essence of city life through a unique architectural perspective.</p>
-        </div>
-    </div>
-
-    <div class="project-card">
-        <div class="project-media">
-          <img src="https://imgur.com/J27QlSW.jpg" alt="Project 2">
-        </div>
-        <div class="project-info">
-          <h3>Urban Photography</h3>
-          <p>Capturing the essence of city life through a unique architectural perspective.</p>
-        </div>
-    </div>
-
-    <div class="project-card">
-        <div class="project-media">
-            <img src="https://lh3.googleusercontent.com/d/1bZgP3Q3IZtsZ1Jd2AwyH5qa9wzMp6lil" alt="Your image description">
-        </div>
-        <div class="project-info">
-          <h3>Urban Photography</h3>
-          <p>Capturing the essence of city life through a unique architectural perspective.</p>
-        </div>
-    </div>
-
-    <div class="project-card">
-        <div class="project-media">
-          <img src="https://imgur.com/W8vIYCE.jpg" alt="Project 2">
-        </div>
-        <div class="project-info">
-          <h3>Urban Photography</h3>
-          <p>Capturing the essence of city life through a unique architectural perspective.</p>
-        </div>
-    </div>
-
-    <h1>Studio Apelbaum</h1>
+    <h1 style="text-align: left;">Studio Apelbaum</h1>
 
     <div class="project-card">
       <div class="project-media">
