--- a/index.html
+++ b/index.html
@@ -447,6 +447,19 @@
         </div>
     </div>
 
+    <div class="project-card">
+        <div class="project-info">
+          <h3>Private party</h3>
+          <p>Installation and gestion of light scene for a private party in France</p>
+        </div>
+        <div class="project-media">
+          <video controls>
+            <source src="https://imgur.com/LEw4Ort.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+          </video>
+        </div>
+    </div>
+
     <h1 style="text-align: left;">Studio Apelbaum</h1>
 
     <div class="project-card">
@@ -462,81 +475,68 @@
     </div>
 
     <div class="project-card">
+        <div class="project-info">
+            <h3>Hush maison</h3>
+            <p>Installation of lights for a party. Design of sound interactive light shadders.</p>
+        </div>
       <div class="project-media">
         <video controls>
           <source src="https://i.imgur.com/89j0mvK.mp4" type="video/mp4">
           Your browser does not support the video tag.
         </video>
       </div>
-      <div class="project-info">
-        <h3>Interactive Experience</h3>
-        <p>A user-centered design approach bringing digital interactions to life.</p>
-      </div>
     </div>
 
     <div class="project-card">
+        <div class="project-info">
+            <h3>ILunchbox Candy</h3>
+            <p>Installation of paintings at Aeden for lunchbox candy. Design of sound interactive light shadders</p>
+          </div>
         <div class="project-media">
           <video controls>
             <source src="https://imgur.com/EmF1MTM.mp4" type="video/mp4">
             Your browser does not support the video tag.
           </video>
         </div>
-        <div class="project-info">
-          <h3>Motion Graphics</h3>
-          <p>An engaging animation showcasing smooth transitions and dynamic visual effects.</p>
-        </div>
       </div>
   
     <div class="project-card">
+        <div class="project-info">
+          <h3>ILunchbox Candy</h3>
+          <p>Installation of paintings at Aeden for lunchbox candy. Design of sound interactive light shadders</p>
+        </div>
         <div class="project-media">
           <video controls>
             <source src="https://imgur.com/pEx0Jls.mp4" type="video/mp4">
             Your browser does not support the video tag.
           </video>
         </div>
-        <div class="project-info">
-          <h3>Interactive Experience</h3>
-          <p>A user-centered design approach bringing digital interactions to life.</p>
-        </div>
     </div>
 
     <div class="project-card">
+        <div class="project-info">
+            <h3>Re:mise</h3>
+            <p>Installation of paintings at Re:mise for a party. Design of sound interactive light shadders</p>
+          </div>
         <div class="project-media">
           <video controls>
             <source src="https://imgur.com/O1VIntm.mp4" type="video/mp4">
             Your browser does not support the video tag.
           </video>
         </div>
-        <div class="project-info">
-          <h3>Motion Graphics</h3>
-          <p>An engaging animation showcasing smooth transitions and dynamic visual effects.</p>
-        </div>
     </div>
   
     <div class="project-card">
+        <div class="project-info">
+            <h3>Studio Apelbaum</h3>
+            <p>Installation of paintings at Re:mise for a performance. Design of sound interactive light shadders.</p>
+          </div>
         <div class="project-media">
           <video controls>
             <source src="https://imgur.com/EYmQuJj.mp4" type="video/mp4">
             Your browser does not support the video tag.
           </video>
-        </div>
-        <div class="project-info">
-          <h3>Interactive Experience</h3>
-          <p>A user-centered design approach bringing digital interactions to life.</p>
-        </div>
-    </div>
-
-    <div class="project-card">
-        <div class="project-media">
-          <video controls>
-            <source src="https://imgur.com/LEw4Ort.mp4" type="video/mp4">
-            Your browser does not support the video tag.
-          </video>
-        </div>
-        <div class="project-info">
-          <h3>Interactive Experience</h3>
-          <p>A user-centered design approach bringing digital interactions to life.</p>
-        </div>
+        </div>  
     </div>
 
     <!-- Continue with remaining images and videos in the same pattern -->
