--- a/index.html
+++ b/index.html
@@ -544,8 +544,8 @@
 
   <section id="contact" class="contact">
     <h2>Contact Me</h2>
-    <p>Email: <a href="mailto:your.email@example.com">your.email@example.com</a></p>
-    <p>LinkedIn: <a href="https://linkedin.com/in/yourprofile" target="_blank">linkedin.com/in/yourprofile</a></p>
+    <p>Email: <a href="mailto:maxime.hubert@student-cs.fr">maxime.hubert@student-cs.fr</a></p>
+    <p>LinkedIn: <a href="https://www.linkedin.com/in/maxime-hubert0/" target="_blank">Linkedin</a></p>
   </section>
 
   <script>
