--- a/index.html
+++ b/index.html
@@ -182,22 +182,29 @@
             transform: translateY(-5px);
         }
 
-        .project-media {
-            width: 100%;
-            aspect-ratio: 16/9;
-            overflow: hidden;
-        }
 
+        
+        .project-media {
+            position: relative;
+            background-color: #000; /* Black background for letterboxing */
+            aspect-ratio: 16/9;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+        
         .project-media img {
             width: 100%;
             height: 100%;
             object-fit: cover;
         }
-
         .project-media video {
-            width: 100%;
+            width: auto;
             height: 100%;
-            object-fit: cover;
+            max-width: 100%;
+            margin: 0 auto;
+            display: block;
+            object-fit: contain; /* This ensures the video maintains its aspect ratio */
         }
 
         .project-info {
