--- a/index.html
+++ b/index.html
@@ -471,14 +471,16 @@
 
     <div class="project-card">
         <div class="project-info">
-          <h3>Motion Graphics</h3>
-          <p>An engaging animation showcasing smooth transitions and dynamic visual effects.</p>
+            <h3>Motion Graphics</h3>
+            <p>An engaging animation showcasing smooth transitions and dynamic visual effects.</p>
         </div>
-        <div class="play-button"></div>
-        <video controls>
-          <source src="https://i.imgur.com/DYKrfgs.mp4" type="video/mp4">
-          Your browser does not support the video tag.
-        </video>
+        <div class="project-media">
+            <div class="play-button"></div>
+            <video controls>
+                <source src="https://i.imgur.com/DYKrfgs.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>
+        </div>
     </div>
 
     <div class="project-card">
