--- a/index.html
+++ b/index.html
@@ -194,6 +194,12 @@
             overflow: hidden;
         }
 
+        .project-card .project-media img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+
         .project-card .project-media video {
             width: auto;
             height: 100%;
