--- a/index.html
+++ b/index.html
@@ -396,6 +396,17 @@
 
     <h1 style="text-align: left;">SBCS</h1>
 
+    <div>
+        SBCS is a student association in Paris dedicated to organizing events ranging from student parties to full-scale raves. 
+        With a material inventory valued at approximately €500,000, SBCS has the capability to rig stages from start to finish, handling everything from design to technical execution.
+
+        During my time with SBCS, I served as the lead lighting designer and technician. 
+        My responsibilities included conceptualizing and designing lighting setups, installing the equipment, and managing the lighting during events.
+
+        I primarily worked with the MA2 Ultra-Light and MA1 lighting consoles. For larger stages, I occasionally operated full-size MA2 consoles. I programmed for events  dynamic animations 
+        with our scenes and operated scenographies during the parties.
+    </div>
+
     <div class="project-card">
         <div class="project-info">
             <h3>TOSS 2022</h3>
