--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
-    <title>Portfolio</title>
+    <title>Maxime Hubert</title>
     <style>
         /* Reset and base styles */
         * {
@@ -396,16 +396,20 @@
 
     <h1 style="text-align: left;">SBCS</h1>
 
-    <div>
+    <div style="margin-bottom: 2rem;">
         SBCS is a student association in Paris dedicated to organizing events ranging from student parties to full-scale raves. 
         With a material inventory valued at approximately €500,000, SBCS has the capability to rig stages from start to finish, handling everything from design to technical execution.
-
+    </div>
+    <div style="margin-bottom: 2rem;">
         During my time with SBCS, I served as the lead lighting designer and technician. 
         My responsibilities included conceptualizing and designing lighting setups, installing the equipment, and managing the lighting during events.
-
+    </div>
+    <div style="margin-bottom: 2rem;"> 
         I primarily worked with the MA2 Ultra-Light and MA1 lighting consoles. For larger stages, I occasionally operated full-size MA2 consoles. I programmed for events  dynamic animations 
         with our scenes and operated scenographies during the parties.
     </div>
+
+    
 
     <div class="project-card">
         <div class="project-info">
