--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
     <div class="project-card">
         <div class="project-info">
             <h3>TOSS 2022</h3>
-            <p>Student Party of more than 3000 attendees</p>
+            <p>Student Party of more than 3000 attendees.</p>
         </div>
         <div class="slideshow-container" id="slideshow-1">
             <div class="slide active">
@@ -435,7 +435,7 @@
     <div class="project-card">
         <div class="project-info">
             <h3>Quadrabang 2022</h3>
-            <p>Student party of more than 2000 attendees</p>
+            <p>Student party of more than 2000 attendees. Design and operation of more than 70 lyres.</p>
         </div>
         <div class="slideshow-container" id="slideshow-2">
             <div class="slide active">
@@ -453,7 +453,7 @@
     <div class="project-card">
         <div class="project-info">
           <h3>Wrecking Bang</h3>
-          <p>Student party</p>
+          <p>Student party. Made use for this stage of our 2 IVL's square by minuit une.</p>
         </div>
         <div class="project-media">
           <img src="https://imgur.com/QfjIola.jpg" alt="Wrecking 1">
@@ -463,7 +463,7 @@
     <div class="project-card">
         <div class="project-info">
             <h3>NDT 2022</h3>
-            <p>Various artists night</p>
+            <p>Design and operation of a grill scenography for a various artists night, ranging from electro to reggae.</p>
         </div>
         <div class="slideshow-container" id="slideshow-3">
             <div class="slide active">
@@ -482,7 +482,7 @@
     <div class="project-card">
         <div class="project-info">
           <h3>Copacabanight</h3>
-          <p>2 IVLs</p>
+          <p>Student party in club. Added our 2 IVL's square to the club scenography and operated the whole system.</p>
         </div>
         <div class="project-media">
             <img src="https://lh3.googleusercontent.com/d/1bZgP3Q3IZtsZ1Jd2AwyH5qa9wzMp6lil" alt="Copa">
@@ -491,7 +491,7 @@
 
     <div class="project-card">
         <div class="project-info">
-          <h3>Tomorrow bang</h3>
+          <h3>Design and operation of this scenography with 20 lyres and 4 k20.</h3>
           <p>lights</p>
         </div>
         <div class="project-media">
@@ -499,10 +499,10 @@
         </div>
     </div>
 
-    <div class="project-card">
+    <!-- <div class="project-card">
         <div class="project-info">
           <h3>Private party</h3>
-          <p>Installation and gestion of light scene for a private party in France</p>
+          <p>Installation and operation of light scene for a private party in France</p>
         </div>
         <div class="project-media">
           <video controls>
@@ -510,9 +510,21 @@
             Your browser does not support the video tag.
           </video>
         </div>
-    </div>
+    </div> -->
 
     <h1 style="text-align: left;">Studio Apelbaum</h1>
+
+    <div style="margin-bottom: 2rem;">
+        Jonathan Apelbaum is French Berlin-based artist. He creates large-scale oil paintings that he pairs with LED panels in order to create immersive experiences.
+        Jonathan is deeply rooted in Berlin's queer art scene and his work is often displayed in clubs and galleries around the city.
+    </div>
+    <div style="margin-bottom: 2rem;">
+        During my collaboration with Jonathan, I had the occasion to work on the softwares he uses to lighten his LED panels, as well as help him design configurations of his paintings 
+        for events and parties. I also had the opportunity to design many of the light shadders that were used during his performances.
+    </div>
+    <div style="margin-bottom: 2rem;"> 
+        This work is deepl connected to music, as we built sound responsive visuals. I was designing visuals that would receive OSC signals as inputs and thus evolve during parties/performances.
+    </div>
 
     <div class="project-card">
         <div class="project-info">
