--- a/index.html
+++ b/index.html
@@ -192,6 +192,7 @@
             justify-content: center;
             align-items: center;
             overflow: hidden;
+            margin-bottom: 2rem;
         }
 
         .project-card .project-media img {
@@ -523,7 +524,7 @@
         for events and parties. I also had the opportunity to design many of the light shadders that were used during his performances.
     </div>
     <div style="margin-bottom: 2rem;"> 
-        This work is deepl connected to music, as we built sound responsive visuals. I was designing visuals that would receive OSC signals as inputs and thus evolve during parties/performances.
+        This work is deeply connected to music, as we built sound responsive visuals. I was designing visuals that would receive OSC signals as inputs and thus evolve during parties/performances.
     </div>
 
     <div class="project-card">
