--- a/index.html
+++ b/index.html
@@ -548,7 +548,7 @@
         </div>
       <div class="project-media">
         <video controls>
-          <source src="https://i.imgur.com/89j0mvK.mp4" type="video/mp4">
+          <source src="https://i.imgur.com/89j0mvK.mp4#t=0,10" type="video/mp4">
           Your browser does not support the video tag.
         </video>
       </div>
@@ -574,7 +574,7 @@
         </div>
         <div class="project-media">
           <video controls>
-            <source src="https://imgur.com/pEx0Jls.mp4" type="video/mp4">
+            <source src="https://imgur.com/pEx0Jls.mp4#t=0,5" type="video/mp4">
             Your browser does not support the video tag.
           </video>
         </div>
