--- a/index.html
+++ b/index.html
@@ -560,7 +560,7 @@
             <p>Installation of paintings at Aeden for lunchbox candy. Design of sound interactive light shadders</p>
           </div>
         <div class="project-media">
-          <video controls>
+          <video style=" height: 120%; margin-top: -10%;" controls>
             <source src="https://imgur.com/EmF1MTM.mp4" type="video/mp4">
             Your browser does not support the video tag.
           </video>
