--- a/index.html
+++ b/index.html
@@ -572,7 +572,7 @@
           <h3>ILunchbox Candy</h3>
           <p>Installation of paintings at Aeden for lunchbox candy. Design of sound interactive light shadders</p>
         </div>
-        <div class="project-media">
+        <div id="video1" class="project-media">
           <video controls>
             <source src="https://imgur.com/pEx0Jls.mp4#t=0,5" type="video/mp4">
             Your browser does not support the video tag.
@@ -753,5 +753,14 @@
         });
     });
 </script>
+
+<script>
+    document.getElementById('myVideo').addEventListener('timeupdate', function() {
+        if(this.currentTime > 5) {
+            this.pause();
+            this.currentTime = 5;  // Prevents the video from going past 5 seconds
+        }
+    });
+    </script>
 </body>
 </html>
