--- a/index.html
+++ b/index.html
@@ -477,6 +477,13 @@
             <button class="next">&#10095;</button>
             <div class="dots-container"></div>
         </div>
+        <div class="project-media">
+            <!-- <div class="play-button"></div> -->
+            <video controls>
+                <source src="https://imgur.com/ZFftTqh.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>
+        </div>
     </div>
 
 
@@ -548,7 +555,7 @@
         </div>
       <div class="project-media">
         <video controls>
-          <source src="https://i.imgur.com/89j0mvK.mp4#t=0,10" type="video/mp4">
+          <source src="https://imgur.com/RWKBuR7.mp4" type="video/mp4">
           Your browser does not support the video tag.
         </video>
       </div>
@@ -560,8 +567,8 @@
             <p>Installation of paintings at Aeden for lunchbox candy. Design of sound interactive light shadders</p>
           </div>
         <div class="project-media">
-          <video style=" height: 120%; margin-top: -10%;" controls>
-            <source src="https://imgur.com/EmF1MTM.mp4" type="video/mp4">
+          <video controls>
+            <source src="https://imgur.com/j9ZfWMT.mp4" type="video/mp4">
             Your browser does not support the video tag.
           </video>
         </div>
@@ -574,7 +581,7 @@
         </div>
         <div id="video1" class="project-media">
           <video controls>
-            <source src="https://imgur.com/pEx0Jls.mp4#t=0,5" type="video/mp4">
+            <source src="https://imgur.com/jy2ubPI.mp4" type="video/mp4">
             Your browser does not support the video tag.
           </video>
         </div>
@@ -754,13 +761,5 @@
     });
 </script>
 
-<script>
-    document.getElementById('myVideo').addEventListener('timeupdate', function() {
-        if(this.currentTime > 5) {
-            this.pause();
-            this.currentTime = 5;  // Prevents the video from going past 5 seconds
-        }
-    });
-    </script>
 </body>
 </html>
