--- a/index.html
+++ b/index.html
@@ -563,7 +563,7 @@
 
     <div class="project-card">
         <div class="project-info">
-            <h3>ILunchbox Candy</h3>
+            <h3>Lunchbox Candy</h3>
             <p>Installation of paintings at Aeden for lunchbox candy. Design of sound interactive light shadders</p>
           </div>
         <div class="project-media">
