--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
             <h3>NDT 2022</h3>
             <p>Design and operation of a grill scenography for a various artists night, ranging from electro to reggae.</p>
         </div>
-        <div class="slideshow-container" id="slideshow-3">
+        <div style="margin-bottom: 2rem;" class="slideshow-container" id="slideshow-3">
             <div class="slide active">
                 <img src="https://imgur.com/D8YA2tv.jpg" alt="NDT 1">
             </div>
@@ -536,8 +536,8 @@
 
     <div class="project-card">
         <div class="project-info">
-            <h3>Motion Graphics</h3>
-            <p>An engaging animation showcasing smooth transitions and dynamic visual effects.</p>
+            <h3>The last supper</h3>
+            <p>Installation of paintings in our studio for a diner. Design of sound interactive light shadders.</p>
         </div>
         <div class="project-media">
             <!-- <div class="play-button"></div> -->
@@ -555,7 +555,7 @@
         </div>
       <div class="project-media">
         <video controls>
-          <source src="https://imgur.com/RWKBuR7.mp4" type="video/mp4">
+          <source src="https://imgur.com/RH7Oskz.mp4" type="video/mp4">
           Your browser does not support the video tag.
         </video>
       </div>
@@ -568,7 +568,7 @@
           </div>
         <div class="project-media">
           <video controls>
-            <source src="https://imgur.com/j9ZfWMT.mp4" type="video/mp4">
+            <source src="https://imgur.com/VsxFS7L.mp4" type="video/mp4">
             Your browser does not support the video tag.
           </video>
         </div>
@@ -577,7 +577,7 @@
     <div class="project-card">
         <div class="project-info">
           <h3>ILunchbox Candy</h3>
-          <p>Installation of paintings at Aeden for lunchbox candy. Design of sound interactive light shadders</p>
+          <p>Installation of paintings at Aeden for lunchbox candy. Design of sound interactive light shadders.</p>
         </div>
         <div id="video1" class="project-media">
           <video controls>
@@ -590,7 +590,7 @@
     <div class="project-card">
         <div class="project-info">
             <h3>Re:mise</h3>
-            <p>Installation of paintings at Re:mise for a party. Design of sound interactive light shadders</p>
+            <p>Installation of paintings at Re:mise for a party. Design of sound interactive light shadders.</p>
           </div>
         <div class="project-media">
           <video controls>
@@ -603,7 +603,7 @@
     <div class="project-card">
         <div class="project-info">
             <h3>Studio Apelbaum</h3>
-            <p>Installation of paintings at Re:mise for a performance. Design of sound interactive light shadders.</p>
+            <p>Installation of paintings in our studio for a performance. Design of sound interactive light shadders.</p>
           </div>
         <div class="project-media">
           <video controls>
