--- a/index.html
+++ b/index.html
@@ -576,7 +576,7 @@
   
     <div class="project-card">
         <div class="project-info">
-          <h3>ILunchbox Candy</h3>
+          <h3>Lunchbox Candy</h3>
           <p>Installation of paintings at Aeden for lunchbox candy. Design of sound interactive light shadders.</p>
         </div>
         <div id="video1" class="project-media">
