--- a/index.html
+++ b/index.html
@@ -499,8 +499,8 @@
 
     <div class="project-card">
         <div class="project-info">
-          <h3>Design and operation of this scenography with 20 lyres and 4 k20.</h3>
-          <p>lights</p>
+          <h3>Tommorowbang</h3>
+          <p>Design and operation of this scenography with 20 lyres and 4 k20.</p>
         </div>
         <div class="project-media">
           <img src="https://imgur.com/W8vIYCE.jpg" alt="Tomorrow 2">
