--- a/index.html
+++ b/index.html
@@ -192,7 +192,6 @@
             justify-content: center;
             align-items: center;
             overflow: hidden;
-            margin-bottom: 2rem;
         }
 
         .project-card .project-media img {
@@ -553,7 +552,7 @@
             <h3>Hush maison</h3>
             <p>Installation of lights for a party. Design of sound interactive light shadders.</p>
         </div>
-      <div class="project-media">
+      <div style="margin-bottom: 2rem;" class="project-media">
         <video controls>
           <source src="https://imgur.com/RH7Oskz.mp4" type="video/mp4">
           Your browser does not support the video tag.
@@ -579,7 +578,7 @@
           <h3>Lunchbox Candy</h3>
           <p>Installation of paintings at Aeden for lunchbox candy. Design of sound interactive light shadders.</p>
         </div>
-        <div id="video1" class="project-media">
+        <div style="margin-bottom: 2rem;" class="project-media">
           <video controls>
             <source src="https://imgur.com/jy2ubPI.mp4" type="video/mp4">
             Your browser does not support the video tag.
@@ -605,7 +604,7 @@
             <h3>Studio Apelbaum</h3>
             <p>Installation of paintings in our studio for a performance. Design of sound interactive light shadders.</p>
           </div>
-        <div class="project-media">
+        <div style="margin-bottom: 2rem;" class="project-media">
           <video controls>
             <source src="https://imgur.com/EYmQuJj.mp4" type="video/mp4">
             Your browser does not support the video tag.
