--- a/index.html
+++ b/index.html
@@ -538,7 +538,7 @@
             <h3>The last supper</h3>
             <p>Installation of paintings in our studio for a diner. Design of sound interactive light shadders.</p>
         </div>
-        <div class="project-media">
+        <div style="margin-bottom: 2rem;" class="project-media">
             <!-- <div class="play-button"></div> -->
             <video controls>
                 <source src="https://i.imgur.com/DYKrfgs.mp4" type="video/mp4">
