--- a/index.html
+++ b/index.html
@@ -409,12 +409,22 @@
         with our scenes and operated scenographies during the parties.
     </div>
 
+    <div style="margin-bottom: 2rem;"> 
+        <p>Our equipment includes:</p>
+        <ul>
+            <li>~30 beam moving heads (Elation 5R, Martin Rush MH3/MH4, Evolite 2R)</li>
+            <li>2 IVL Squares by Minuit Une</li>
+            <li>6 Clay Paky K20</li>
+            <li>Assorted washes, blinders, strobes, and smoke machines</li>
+        </ul>
+    </div>
     
 
     <div class="project-card">
         <div class="project-info">
             <h3>TOSS 2022</h3>
-            <p>Student Party of more than 3000 attendees.</p>
+            <p>Large-scale production with 3,000+ attendees</p>
+            <p>rental of 30 Magicdot-R</p>
         </div>
         <div class="slideshow-container" id="slideshow-1">
             <div class="slide active">
@@ -452,7 +462,7 @@
 
     <div class="project-card">
         <div class="project-info">
-          <h3>Wrecking Bang</h3>
+          <h3>Student party</h3>
           <p>Student party. Made use for this stage of our 2 IVL's square by minuit une.</p>
         </div>
         <div class="project-media">
@@ -488,7 +498,7 @@
 
     <div class="project-card">
         <div class="project-info">
-          <h3>Copacabanight</h3>
+          <h3>Student party</h3>
           <p>Student party in club. Added our 2 IVL's square to the club scenography and operated the whole system.</p>
         </div>
         <div class="project-media">
@@ -498,7 +508,7 @@
 
     <div class="project-card">
         <div class="project-info">
-          <h3>Tommorowbang</h3>
+          <h3>Student party</h3>
           <p>Design and operation of this scenography with 20 lyres and 4 k20.</p>
         </div>
         <div class="project-media">
