--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
     <div class="project-card">
         <div class="project-info">
             <h3>TOSS 2022</h3>
-            <p>Large-scale production with 3,000+ attendees</p>
+            <p>Design and operation of a Large-scale production for 3,000+ attendees.</p>
             <p>rental of 30 Magicdot-R</p>
         </div>
         <div class="slideshow-container" id="slideshow-1">
@@ -445,7 +445,8 @@
     <div class="project-card">
         <div class="project-info">
             <h3>Quadrabang 2022</h3>
-            <p>Student party of more than 2000 attendees. Design and operation of more than 70 lyres.</p>
+            <p>Design and operation of a Large-scale production for 3,000+ attendees.</p>
+            <p>rental of 35 Robe Robin pointe</p>
         </div>
         <div class="slideshow-container" id="slideshow-2">
             <div class="slide active">
@@ -463,7 +464,7 @@
     <div class="project-card">
         <div class="project-info">
           <h3>Student party</h3>
-          <p>Student party. Made use for this stage of our 2 IVL's square by minuit une.</p>
+          <p>Mnimalist stage with 2 IVL's square by Minuit Une</p>
         </div>
         <div class="project-media">
           <img src="https://imgur.com/QfjIola.jpg" alt="Wrecking 1">
@@ -474,6 +475,7 @@
         <div class="project-info">
             <h3>NDT 2022</h3>
             <p>Design and operation of a grill scenography for a various artists night, ranging from electro to reggae.</p>
+            <p>rental of 2 Ayrton ghibli-s and 10 Ayrton nandobeam s-6</p>
         </div>
         <div style="margin-bottom: 2rem;" class="slideshow-container" id="slideshow-3">
             <div class="slide active">
@@ -481,6 +483,12 @@
             </div>
             <div class="slide">
                 <img src="https://imgur.com/J27QlSW.jpg" alt="NDT 2">
+            </div>
+            <div class="slide">
+                <video controls>
+                    <source src="https://imgur.com/ZFftTqh.mp4" type="video/mp4">
+                    Your browser does not support the video tag.
+                </video>
             </div>
             <button class="prev">&#10094;</button>
             <button class="next">&#10095;</button>
@@ -499,7 +507,7 @@
     <div class="project-card">
         <div class="project-info">
           <h3>Student party</h3>
-          <p>Student party in club. Added our 2 IVL's square to the club scenography and operated the whole system.</p>
+          <p>Party in a parisian club. Added our 2 IVL's square to the club scenography and operated the whole system.</p>
         </div>
         <div class="project-media">
             <img src="https://lh3.googleusercontent.com/d/1bZgP3Q3IZtsZ1Jd2AwyH5qa9wzMp6lil" alt="Copa">
@@ -573,7 +581,7 @@
     <div class="project-card">
         <div class="project-info">
             <h3>Lunchbox Candy</h3>
-            <p>Installation of paintings at Aeden for lunchbox candy. Design of sound interactive light shadders</p>
+            <p>Installation of paintings at Aeden for Lunchbox Candy. Design of sound interactive light shadders</p>
           </div>
         <div class="project-media">
           <video controls>
