--- a/index.html
+++ b/index.html
@@ -485,10 +485,13 @@
                 <img src="https://imgur.com/J27QlSW.jpg" alt="NDT 2">
             </div>
             <div class="slide">
-                <video controls>
-                    <source src="https://imgur.com/ZFftTqh.mp4" type="video/mp4">
-                    Your browser does not support the video tag.
-                </video>
+                <div class="project-media">
+
+                    <video controls>
+                        <source src="https://imgur.com/ZFftTqh.mp4" type="video/mp4">
+                        Your browser does not support the video tag.
+                    </video>
+                </div>
             </div>
             <button class="prev">&#10094;</button>
             <button class="next">&#10095;</button>
