--- a/index.html
+++ b/index.html
@@ -486,9 +486,16 @@
             </div>
             <div class="slide">
                 <div class="project-media">
-
                     <video controls>
                         <source src="https://imgur.com/ZFftTqh.mp4" type="video/mp4">
+                        Your browser does not support the video tag.
+                    </video>
+                </div>
+            </div>
+            <div class="slide">
+                <div class="project-media">
+                    <video controls>
+                        <source src="https://imgur.com/fS5PLJI.mp4" type="video/mp4">
                         Your browser does not support the video tag.
                     </video>
                 </div>
@@ -496,13 +503,6 @@
             <button class="prev">&#10094;</button>
             <button class="next">&#10095;</button>
             <div class="dots-container"></div>
-        </div>
-        <div class="project-media">
-            <!-- <div class="play-button"></div> -->
-            <video controls>
-                <source src="https://imgur.com/ZFftTqh.mp4" type="video/mp4">
-                Your browser does not support the video tag.
-            </video>
         </div>
     </div>
 
@@ -524,6 +524,20 @@
         </div>
         <div class="project-media">
           <img src="https://imgur.com/W8vIYCE.jpg" alt="Tomorrow 2">
+        </div>
+    </div>
+
+    <div class="project-card">
+        <div class="project-info">
+            <h3>Student party</h3>
+            <p>Light design with 2 IVLs</p>
+        </div>
+        <div style="margin-bottom: 2rem;" class="project-media">
+            <!-- <div class="play-button"></div> -->
+            <video controls>
+                <source src="https://i.imgur.com/DYKrfgs.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>
         </div>
     </div>
 
@@ -599,11 +613,28 @@
           <h3>Lunchbox Candy</h3>
           <p>Installation of paintings at Aeden for lunchbox candy. Design of sound interactive light shadders.</p>
         </div>
-        <div style="margin-bottom: 2rem;" class="project-media">
-          <video controls>
-            <source src="https://imgur.com/jy2ubPI.mp4" type="video/mp4">
-            Your browser does not support the video tag.
-          </video>
+
+        <div style="margin-bottom: 2rem;" class="slideshow-container" id="slideshow-4">
+            </div>
+            <div class="slide">
+                <div class="project-media">
+                    <video controls>
+                        <source src="ttps://imgur.com/jy2ubPI.mp4" type="video/mp4">
+                        Your browser does not support the video tag.
+                    </video>
+                </div>
+            </div>
+            <div class="slide">
+                <div class="project-media">
+                    <video controls>
+                        <source src="https://imgur.com/iUJuRHg.mp4" type="video/mp4">
+                        Your browser does not support the video tag.
+                    </video>
+                </div>
+            </div>
+            <button class="prev">&#10094;</button>
+            <button class="next">&#10095;</button>
+            <div class="dots-container"></div>
         </div>
     </div>
 
